# jmap-client

./: Cargo.toml
src/: client.rs  client_ws.rs  lib.rs
src/blob/: download.rs  upload.rs
src/core/: request.rs
src/event_source/: stream.rs
