[package]
name = "jmap-client"
description = "JMAP client library for Rust"
version = "0.4.1"
edition = "2021"
authors = [ "Stalwart Labs LLC <hello@stalw.art>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stalwartlabs/jmap-client"
homepage = "https://github.com/stalwartlabs/jmap-client"
keywords = ["jmap", "email", "mail", "e-mail"]
categories = ["email"]
readme = "README.md"
resolver = "2"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"]}
ahash = {version = "0.8", features = ["serde"]}
parking_lot = "0.12"
base64 = "0.22"
maybe-async = "0.2"
rustls-pki-types = { version = "1" }
futures-util = { version = "0.3", optional = true}
async-stream = { version = "0.3", optional = true}
tokio = { version = "1.51", default-features = false, features = ["sync"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"], optional = true}
rustls = { version = "0.23", optional = true, default-features = false, features = ["std"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.13", default-features = false }
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["async", "websockets", "aws_lc_rs"]
async = ["futures-util", "async-stream", "reqwest/stream"]
websockets = ["tokio", "tokio-tungstenite", "rustls"]
blocking = ["reqwest/blocking", "maybe-async/is_sync"]
ring = ["rustls?/ring"]
aws_lc_rs = ["rustls?/aws_lc_rs"]
aws-lc-rs = ["aws_lc_rs"]
# Opt-in to disabling TLS certificate validation. Only enable for testing.
accept_invalid_certs = []
debug = []

[lib]
doctest = false

[profile.bench]
debug = true
